# icwasm

./: Cargo.toml  LICENSE  README.md  default.nix  flake.nix  index.html
.github/workflows/: ci.yml
src/: lib.rs
tests/: web.rs
